        - perl/selection: matching on unicode characters in the selection
          code was O(n²), which equals infinity in some degenerate cases
          :-> Matching is now done on UTF-8, which makes it almost instant.
        - perl/selection, perl/selection-autotransform: regexes are now
          being interpreted in the locale urxvt was started.
        - applied many patches by Emanuele Giaquinta that clean the code up
          and fix more bugs in the utmp logging code.
	- add tsl/fsl and related capabilities to the terminfo description,
          to set the window title.

7.0  Fri Jan 13 14:02:18 CET 2006
	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect
          will likely be small as 99% of the xft slowness is server-related.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: non-blocking anyevent support.
        - perl: run tainted and ignore perl-eval/perl-lib if started
          setuid/setgid.
        - free the resource database: this plugs a massive memory leak. As a
          side effect, it also gets rid of XGetDefault calls.
        - free one of the cursors, fixes a small memory leak.
        - built-in (as opposed to terminfos) visual bell was broken/too fast.
        - applied minor cleanups by Ladislav Michnovic.
        - applied pty handling cleanups and improvements (Emanuele Giaquinta).
        - mark-urls launch-on-click by jepler.
        - removed "small" resource parsing function, as it wasn't really
          compatible, and not really small either.